--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^3.12.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.73",
-    "@mui/material": "^5.14.1",
+    "@mui/x-date-pickers": "^6.11.2",
+    "@mui/x-date-pickers-pro": "^6.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.13.0",
@@ -23,7 +23,9 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "semantic-ui-react": "^2.1.4",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
